--- a/src/components/chip/Chip.scss
+++ b/src/components/chip/Chip.scss
@@ -5,9 +5,9 @@
     display: inline-block;
     padding: 0 1.6rem;
     margin: 0 1rem;
-    height: 2.5rem;
-    font-size: 1rem;
-    line-height: 2.5rem;
+    height: 2.2rem;
+    font-size: 0.9rem;
+    line-height: 2.3rem;
     border-radius: 25px;
     background-color: #B29DD9;
     box-shadow:   
@@ -26,4 +26,6 @@
 
 .er-no-shadow {
     box-shadow: 0 0;
+    font-size: 1rem;
+    font-weight: 500;
 }
